ContextMenu+Selections+Fixes
Add new elements to conext menu, make unclickable buttons invisible.
Add selection for cards, shift + mouse move -> create selection square, cntrl + click on card -> select card.
Fix data lost from too fast page refresh.

--- a/Styles/card.css
+++ b/Styles/card.css
@@ -1,6 +1,6 @@
 .card {
     background-color: rgb(196, 196, 0);
-    color: rgb(50, 70, 107);
+    color: rgb(63, 89, 136);
     position: absolute;
     display: flexbox;
     min-width: 130px;
